--- a/renderer/sign-in.html
+++ b/renderer/sign-in.html
@@ -118,54 +118,15 @@
 
     <header class="header_area">
 
-        <div class="header_navbar">
-            <div class="container">
-                <nav class="navbar navbar-expand-lg">
-                    <a class="navbar-brand" href="#" style="width: 26rem; margin-right: 10rem;">
-                        <img src="../renderer/images/classify-logo-definitive.png" alt="logo">
-                    </a>
-
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="toggler-icon"></span>
-                        <span class="toggler-icon"></span>
-                        <span class="toggler-icon"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent" style="flex-grow: 0;">
-                        <ul class="navbar-nav m-auto">
-                            <li>
-                                
-                                <i class="far fa-tachometer-alt-average" style="margin-right: 0.3rem;"></i><a href="./dashboard.html">Dashboard <span class="line"></span></a>
-                            </li>
-                            <li>
-                                <i class="far fa-tag" style="margin-right: 0.3rem;"></i><a href="./category-control.html">Categorias <span class="line"></span></a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="navbar_btn">
-                        <ul>
-                            <li>
-                                <div class="dropdown">
-                                    <a href="#" class="dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-left:1rem;">Minha Conta</a>
-
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                        <ul>
-                                            <li><a href="dashboard.html"><i class="fal fa-tachometer-alt-average"></i> Dashboard</a></li>
-                                            <li><a href="dashboard.html"><i class="fal fa-user"></i> Users</a></li>
-                                            <!-- <li><a href="profile-settings.html"><i class="fal fa-cog"></i> Definições de Perfil</a></li> -->
-                                            <li><a href="privacy-setting.html"><i class="fal fa-star"></i> Definições de Privacidade</a></li>
-                                            <li><a href="#"><i class="fal fa-sign-out"></i> Sair</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li>
-                            <li><a class="sign-up" href="post-ads.html">Entrar</a></li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
+      <div class="header_navbar">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg" style="display: block; text-align: center;">
+                <a class="navbar-brand" href="dashboard.html" style="width: 26rem; margin-right: 10rem;">
+                    <img src="../renderer/images/classify-logo-definitive.png" alt="logo">
+                </a>
+            </nav>
         </div>
+    </div>
 
         <div class="page_banner bg_cover" style="background-image: url(../renderer/images/page-banner.jpg)">
           <div class="container">
@@ -188,30 +149,24 @@
           <div class="col-lg-5 col-md-7 col-sm-9">
             <div class="sign_in_form">
               <div class="sign_title">
-                <h5 class="title">Sign In Now</h5>
+                <h5 class="title">Entrar no Classify</h5>
               </div>
-              <form action="/auth/sign-in" method="POST">
+              <form id="sign_in">
+
                 <div class="sign_form_wrapper">
                   <div class="single_form">
-                    <input type="email" placeholder="Email" name="email" value=""/>
+                    <input type="email" placeholder="Email" name="email" value="admin@admin.com"/>
                     <i class="fal fa-at"></i>
                   </div>
                   <div class="single_form">
-                    <input type="password" placeholder="Password" name="password" value=""/>
+                    <input type="password" placeholder="Password" name="password" value="admin123"/>
                     <i class="fal fa-key"></i>
                   </div>
-                  <!-- <div class="single_form d-sm-flex justify-content-end">
-                    <div class="sign_forgot">
-                      <a href="#">Esqueceu sua senha?</a>
-                    </div>
-                  </div> -->
                   <div class="single_form">
-                    <button class="main-btn" style="width: 100%;">Sign In</button>
+                    <button class="main-btn" style="width: 100%;">Iniciar sessão</button>
                   </div>
-                    <!-- <div class="sign_forgot active" style="text-align: center; margin-top: 1rem;">
-                      <a href="./sign-up.html" style="color: #ff4367;">Não possui conta? Crie uma conta.</a>
-                    </div> -->
                 </div>
+
               </form>
             </div>
           </div>
@@ -234,7 +189,6 @@
               <li><a href="./about">Quem somos</a></li>
               <li><a href="./contact">Contacto</a></li>
               <li><a href="./faq">Perguntas Frequentes</a></li>
-              <!-- <li><a href="./posts/blog">Blog</a></li> -->
               </ul>
           </div>
           </div>
@@ -243,9 +197,6 @@
               <h5 class="footer_title">Links Úteis</h5>
               <ul class="link">
               <li><a href="./pricing">Pacotes de Anúncios</a></li>
-              <!-- <li><a href="#">Pesquisas populares</a></li> -->
-              <!-- <li><a href="./user/dashboard">Área do Cliente</a></li> If not logged in -> sing in/up page -->
-              <!-- <li><a href="#">App Classify</a></li> -->
               </ul>
           </div>
           </div>
@@ -268,23 +219,6 @@
 
 <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
-<!--====== BACK TOP TOP PART ENDS ======-->
-
-<!--====== PART START ======-->
-
-<!--
-<section class="">
-  <div class="container">
-      <div class="row">
-          <div class="col-lg-">
-              
-          </div>
-      </div>
-  </div>
-</section>
--->
-
-<!--====== PART ENDS ======-->
 <!--====== Jquery js ======-->
 <script src="./js/vendor/jquery-1.12.4.min.js"></script>
 <script src="./js/vendor/modernizr-3.7.1.min.js"></script>
@@ -314,6 +248,8 @@
 
 <!--====== Main js ======-->
 <script src="./js/main-web.js"></script>
+
+<script src="../sign-in.js"></script>
 
 </body>
 </html>
