--- a/renderer/user-control.html
+++ b/renderer/user-control.html
@@ -68,50 +68,10 @@
 
         <div class="header_navbar">
             <div class="container">
-                <nav class="navbar navbar-expand-lg">
+                <nav class="navbar navbar-expand-lg" style="display: block; text-align: center;">
                     <a class="navbar-brand" href="dashboard.html" style="width: 26rem; margin-right: 10rem;">
                         <img src="../renderer/images/classify-logo-definitive.png" alt="logo">
                     </a>
-
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="toggler-icon"></span>
-                        <span class="toggler-icon"></span>
-                        <span class="toggler-icon"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent" style="flex-grow: 0;">
-                        <ul class="navbar-nav m-auto">
-                            <li>
-                                
-                                <i class="far fa-tachometer-alt-average" style="margin-right: 0.3rem;"></i><a href="./dashboard.html">Dashboard <span class="line"></span></a>
-                            </li>
-                            <li>
-                                <i class="far fa-tag" style="margin-right: 0.3rem;"></i><a href="./category-control.html">Categorias <span class="line"></span></a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="navbar_btn">
-                        <ul>
-                            <li>
-                                <div class="dropdown">
-                                    <a href="#" class="dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-left:1rem;">Minha Conta</a>
-
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                        <ul>
-                                            <li><a href="dashboard.html"><i class="fal fa-tachometer-alt-average"></i> Dashboard</a></li>
-                                            <li><a href="./user-control.html"><i class="fal fa-user"></i> Gerir Utilizadores</a></li>
-                                            <li><a href="category-control.html"><i class="fal fa-tag"></i> Gerir Categorias</a></li>
-                                            <!-- <li><a href="profile-settings.html"><i class="fal fa-cog"></i> Definições de Perfil</a></li> -->
-                                            <li><a href="privacy-setting.html"><i class="fal fa-star"></i> Definições de Privacidade</a></li>
-                                            <li><a href="#"><i class="fal fa-sign-out"></i> Sair</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li>
-                            <li><a class="sign-up" href="./sign-in.html">Entrar</a></li>
-                        </ul>
-                    </div>
                 </nav>
             </div>
         </div>
@@ -168,18 +128,6 @@
                                       Gerir Categorias
                                     </a>
                                   </li>
-                                  <!-- <li>
-                                    <a href="/profile-settings">
-                                      <i class="fal fa-cog"></i>
-                                      Definições de Perfil
-                                    </a>
-                                  </li> -->
-                                  <!-- <li>
-                                    <a href="/change-password">
-                                      <i class="fal fa-key"></i>
-                                      Alterar Password
-                                    </a>
-                                  </li> -->
                                   <li>
                                     <a href="/privacy-setting">
                                       <i class="fal fa-star"></i>
@@ -326,7 +274,6 @@
                     <li><a href="./about">Quem somos</a></li>
                     <li><a href="./contact">Contacto</a></li>
                     <li><a href="./faq">Perguntas Frequentes</a></li>
-                    <!-- <li><a href="./posts/blog">Blog</a></li> -->
                     </ul>
                 </div>
                 </div>
@@ -335,9 +282,6 @@
                     <h5 class="footer_title">Links Úteis</h5>
                     <ul class="link">
                     <li><a href="./pricing">Pacotes de Anúncios</a></li>
-                    <!-- <li><a href="#">Pesquisas populares</a></li> -->
-                    <!-- <li><a href="./user/dashboard">Área do Cliente</a></li> If not logged in -> sing in/up page -->
-                    <!-- <li><a href="#">App Classify</a></li> -->
                     </ul>
                 </div>
                 </div>
