--- a/renderer/sign-in.html
+++ b/renderer/sign-in.html
@@ -249,7 +249,7 @@
 <!--====== Main js ======-->
 <script src="./js/main-web.js"></script>
 
-<script src="../sign-in.js"></script>
+<script src="../modules/sign-in.js" type="module"></script>
 
 </body>
 </html>
