fix: typo in word 'aprovar'

--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -169,7 +169,7 @@
               Fechar
             </button>
             <button id="approve-btn" type="button" class="btn btn-success">
-              Approvar Anúncio
+              Aprovar Anúncio
             </button>
           </div>
         </div>
