fix: now the user can sign-out (simple)

--- a/renderer/category-control.html
+++ b/renderer/category-control.html
@@ -153,7 +153,7 @@
                                     </a>
                                   </li>
                                   <li>
-                                    <a href="/logout">
+                                    <a href="./sign-in.html">
                                       <i class="fal fa-sign-out"></i>
                                       Sair
                                     </a>
