--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -216,7 +216,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="/logout">
+                      <a href="./sign-in.html">
                         <i class="fal fa-sign-out"></i>
                         Sair
                       </a>
