--- a/renderer/user-control.html
+++ b/renderer/user-control.html
@@ -231,7 +231,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="/logout">
+                      <a href="./sign-in.html">
                         <i class="fal fa-sign-out"></i>
                         Sair
                       </a>
